--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,14 +1,14 @@
 <header id="header">
     <div class="header-container">
         <div class="logo-section">
-            <a href="/public/index.html" class="logo-link">
+            <a href="/public/home.html" class="logo-link">
                 <img src="/src/assets/images/logo.png" alt="Logo" class="logo">
                 <img src="/src/assets/images/spicy-text.png" alt="Spicy & Juicy"
                     class="spicy-text">
             </a>
         </div>
         <nav class="nav-menu">
-            <a href="/public/index.html" class="nav-item" data-page="home">Trang
+            <a href="/public/home.html" class="nav-item" data-page="home">Trang
                 chủ</a>
             <a href="/public/pages/menu.html" class="nav-item"
                 data-page="menu">Thực đơn</a>
